<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D4ECD5"
    tools:context=".Admin_feedbacks">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="386dp"
        android:layout_height="113dp"
        android:layout_marginTop="168dp"
        android:background="#FBF9F9"
        android:text="@string/the_app_s_ability_to_categorize_my_expenses_has_made_it_so_much_easier_for_me_to_understand_where_my_money_is_going_i_no_longer_feel_like_my_money_is_slipping_away_without_my_knowledge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.582" />

    <Button
        android:id="@+id/button16"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#575151"
        android:text="View"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#575151"
        android:text="reply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName14"
        android:layout_width="202dp"
        android:layout_height="44dp"
        android:layout_marginEnd="196dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/kishen_gmail_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="407dp"
        android:layout_height="42dp"
        android:background="#3DAE42"
        android:text="@string/show_feedback"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        tools:layout_editor_absoluteX="2dp" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="204dp"
        android:layout_height="40dp"
        android:layout_marginEnd="196dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/binuka_gmail_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/button11"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="364dp"
        android:backgroundTint="#575151"
        android:text="@string/reply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="386dp"
        android:layout_height="113dp"
        android:layout_marginTop="168dp"
        android:background="#FBF9F9"
        android:text="@string/i_feel_more_in_control_of_my_finances_since_using_this_app_the_ability_to_set_up_different_savings_goals_and_track_my_progress_has_been_motivating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="364dp"
        android:backgroundTint="#575151"
        android:text="@string/view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="64dp"
        android:layout_height="70dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        app:srcCompat="@drawable/user_avatar_with_check_mark" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="63dp"
        android:layout_height="27dp"
        android:layout_marginEnd="44dp"
        android:text="@string/admin"
        android:textAlignment="center"
        android:textColor="#191818"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

</androidx.constraintlayout.widget.ConstraintLayout>